# mlops-project

./: .gitignore  Dockerfile.api  README.md  pyproject.toml
.github/workflows/: mlops-modular-workflow.yaml
configs/: model_config.yaml
data/processed/: cleaned_house_data_ds.csv  featured_house_data.csv
data/raw/: house_data.csv
deploy/mlflow/: compose.yaml
notebooks/: 01_data_engineering.ipynb  02_eda.ipynb  03_feature_engineering.ipynb  04_experimentation.ipynb
src/api/: inference.py  main.py  schemas.py
src/data/: data_processor.py
src/features/: features.py
src/models/: train_model.py
