[project]
name = "mlops-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

[dependency-groups]
core = [
    "numpy>=1.23.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "joblib>=1.5.3"
]

api = [
    "fastapi[standard]>=0.128.0"
]

training=[
    "xgboost>=3.1.3"
]

dev = [
    "seaborn>=0.13.2",
    "mlflow>=3.9.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8"
]
